--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -15,7 +15,6 @@
     "jsx": "preserve",
     "baseUrl": "."
   },
-  "include": [
-    "next-env.d.ts","**/*.ts","**/*.tsx","**/*.js"],
-    "exclude": ["node_modules", ".next", "out"],
+  "include": ["next-env.d.ts","**/*.ts","**/*.tsx","**/*.js"],
+  "exclude": ["node_modules", ".next", "out"],
 }
